# PSP

./: README.md
files/: H001.LS  H002.LS  O001.LS  O002.LS  boundary_cloud.pcd  point_cloud.pcd
files/other_code/: planning.cpp
files/other_code/calibration_mode/: CMakeLists.txt
files/other_code/calibration_mode/include/: common_include.h  workingSpaceTF.h
files/other_code/calibration_mode/src/: calibration.cpp  workingSpaceTF.cpp
logfile/: logging_file.txt
src/calibration_mode/: package.xml
src/calibration_mode/include/: workingSpaceTF.h
src/calibration_mode/src/: calibration.cpp  workingSpaceTF.cpp
src/cam_calibration/: CMakeLists.txt  package.xml
src/cam_calibration/src/: cam_calibration.py
src/communication/: CMakeLists.txt
src/communication/src/: OUT.LS  modbus  modbus.cpp  modbus_plc_srv.cpp  modbus_robot_srv.cpp  plc_state_pub.cpp
src/controller/: CMakeLists.txt
src/controller/launch/: controller.launch  outsole.launch
src/controller/src/: controller.py  outsole_controller.py
src/outsole/: CMakeLists.txt  package.xml
src/outsole/src/: outsole_path.py
src/outsole_path/: CMakeLists.txt  CMakeLists_de.txt  package.xml  package_de.xml
src/outsole_path/src/: outsole_path.py
src/outsole_path/srv/: GetPath.srv
src/path_planning_ver1/: CMakeLists.txt
src/path_planning_ver1/include/: common_include.h  planning.h  pointcloud_process.h  workingSpaceTF.h
src/path_planning_ver1/src/: parameters.json  path_planning_ver1.cpp  planning.cpp  pointcloud_process.cpp  workingSpaceTF _apriltag.cpp  workingSpaceTF _v2.cpp  workingSpaceTF.cpp
src/vision_capture2/src/: vision_capture.py
tuning/: outsole_path.json  path.json
